Ajuste de error modificación y pruebas - Intento 2
